@@ -1,0 +1,14 @@
+# to override these or other properties with local user settings,
+# create a unversioned build.properties file
+
+# The location of the common build system
+common.build.dir=${basedir}/../../../common-build
+
+javac.source=1.3
+javac.target=1.3
+debug=true
+optimize=false
+
+project.base.version=1.0-m1
+#project.version=${project.base.version}
+#ivy.status=release
