@@ -1,0 +1,59 @@
+<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE beans PUBLIC "-//SPRING//DTD BEAN//EN" "http://www.springframework.org/dtd/spring-beans.dtd">
+<beans>
+    <!-- Spring-WS beans -->
+    <bean id="messageDispatcher" class="org.springframework.ws.soap.SoapMessageDispatcher">
+        <description>
+            The MessageDispatcher is responsible for routing messages to endpoints.
+        </description>
+        <property name="endpointMappings">
+            <ref local="payloadMapping"/>
+        </property>
+        <property name="endpointExceptionResolvers">
+            <ref local="endpointExceptionResolver"/>
+        </property>
+    </bean>
+
+    <bean id="payloadMapping" class="org.springframework.ws.soap.endpoint.PayloadRootQNameEndpointMapping">
+        <description>
+            This endpoint mapping uses the qualified name of the payload (body contents) to determine the endpoint for
+            an incoming message. Every message is passed to the default endpoint. Additionally, messages are logged
+            using the logging interceptor.
+        </description>
+        <property name="defaultEndpoint" ref="echoEndpoint" />
+        <property name="interceptors">
+            <list>
+                <ref local="validatingInterceptor"/>
+                <ref local="loggingInterceptor"/>
+            </list>
+        </property>
+    </bean>
+
+    <bean id="validatingInterceptor" class="org.springframework.ws.endpoint.PayloadValidatingInterceptor">
+        <description>
+            This interceptor validates both incoming and outgoing message contents according to the 'echo.xsd' XML
+            Schema file.
+        </description>
+        <property name="schema" value="echo.xsd"/>
+        <property name="validateRequest" value="true"/>
+        <property name="validateResponse" value="true"/>
+    </bean>
+
+    <bean id="loggingInterceptor" class="org.springframework.ws.endpoint.PayloadLoggingInterceptor">
+        <description>
+            This interceptor logs the message payload.
+        </description>
+    </bean>
+
+    <bean id="echoEndpoint" class="org.springframework.ws.samples.echo.ws.EchoEndpoint">
+        <description>
+            This endpoint handles echo requests.
+        </description>
+        <property name="echoService" ref="echoService"/>
+    </bean>
+
+    <bean id="endpointExceptionResolver" class="org.springframework.ws.soap.endpoint.SimpleSoapExceptionResolver"/>
+
+    <!-- "Business" (POJO) services -->
+    <bean id="echoService" class="org.springframework.ws.samples.echo.service.impl.EchoServiceImpl"/>
+
+</beans>
